--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "docker-status"
 version = "0.1.0"
-description = ""
+description = "A simple status page for my Docker containers."
 authors = ["Marco Andronaco <andronacomarco@gmail.com>"]
 readme = "README.md"
 packages = [{include = "docker_status"}]
@@ -10,8 +10,13 @@ packages = [{include = "docker_status"}]
 python = "^3.11"
 flask = "^2.3.2"
 requests = "^2.31.0"
-waitress = "^2.1.2"
 docker = "^6.1.3"
+
+[tool.poetry.group.prod]
+optional = true
+
+[tool.poetry.group.prod.dependencies]
+bjoern = "^3.2.2"
 
 
 [build-system]
