--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ docker = "^6.1.3"
 optional = true
 
 [tool.poetry.group.prod.dependencies]
-bjoern = "^3.2.2"
-
+waitress = "^2.1.2"
 
 [build-system]
 requires = ["poetry-core"]
