--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,10 @@
 services:
   app:
     build: .
-    image: docker_status:latest
+    image: ghcr.io/birabittoh/docker-status:main
     container_name: docker-status
     ports:
       - 127.0.0.1:1111:80
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ${PWD}/config.json:/app/config.json:ro
-    #healthcheck:
-    #  test: wget -nv --tries=1 --spider http://localhost/stats || exit 1
-    #  interval: 30s
-    #  timeout: 5s
-    #  retries: 2
+      - ./config.json:/app/config.json:ro
